# slurp

./: .clang-format  .gitignore  flake.nix  main.c  meson.build  render.c  sticker.c
include/: slurp.h  sticker.h
